- Fix serializable collections - Implement auth with JWT